# gridmate

./: .env.example  .gitignore  Dockerfile  README.md  app.py  config.yaml  deploy.sh  eslint.config.mjs  package.json  pyproject.toml  repository.yaml  requirements.txt  run-checks.sh  run.sh
.github/copilot/: copilot-instructions.md
.github/prompts/: implement-with-rules.prompt.md
.github/skills/: chartjs.md  emhass.md  home-assistant.md
docs/: FRONTEND_GUIDELINES.md  OPTIMIZATION.md
docs/configuration/: DEPLOYMENT.md  ENERGY_CONTRACT.md  ENERGY_FEED.md
docs/dashboards/: DEVICES.md  ENERGY_COSTS.md  HOME_BATTERY.md  LIVE.md  SOLAR.md
docs/features/: DEBUGGING_CLI.md  GUIDES.md
docs/features/dashboard/: OPTIMIZATION.md
gridmate_cli/: main.py  runtime.py
translations/: en.yaml
web/: __init__.py
web/forms/: __init__.py  contract.py  data.py  device.py  energy.py  optimization.py  price_provider.py  solar.py
web/model/: __init__.py  persistence.py
web/model/data/: data_connector.py  ha_connector.py
web/model/device/: __init__.py  device_type.py  device_types.py  models.py
web/model/energy/: __init__.py  cost_calculator.py  models.py  price_provider.py
web/model/models/: __init__.py
web/model/optimization/: __init__.py  config_validator.py  connector.py  cost_forecast.py  emhass_connector.py  ha_automation_manager.py  manual_schedule_service.py  models.py  optimization_manager.py  result_store.py  scheduler.py  solar_forecast.py
web/model/solar/: __init__.py  forecast_provider.py  (+4 more)
web/routes/: routes.py
web/templates/: layout.html
(+58 files in other folders)
